--- a/index.ipynb
+++ b/index.ipynb
@@ -699,7 +699,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1 style='color:#ED7261'>DETECTION MODELS</h1>"
+    "<h1 id='#models' style='color:#ED7261'>DETECTION MODELS</h1>"
    ]
   },
   {
@@ -1132,7 +1132,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h4 style='color:orange'>Realistic use</h4>\n",
+    "<h4 style='color:orange' id='#use'>Realistic use</h4>\n",
     "\n",
     "I was not able to find a false negative to test a rule based system, but I will showcase a Rule based system following the requirements, in the form of what an actual system could look like. \n",
     "\n",
@@ -1351,12 +1351,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The aim of this project was to solve item 3 of the Risk Analyst I - Case challenge. The questions were answered during this entire notebook but some of them will be condensed here.\n",
+    "The aim of this notebook was to solve item 3 of the Risk Analyst I - Case challenge. The questions were answered during this entire notebook they will be condensed and summarised here.\n",
+    "\n",
+    "3)\n",
     "\n",
     "1. Analyze the data provided and present your conclusions. What suspicious behaviors did\n",
     "you find? What led you to this conclusion? What actions would you take?\n",
     "\n",
-    "The data analysis leads us to believe that transactions happening between 4pm and 6 am are the most likely to be fraudulent when combined with a large transaction amount (larger than 2000), as well as multiple (surpassing 10) transactions on the same device or by the same user. This was explored in the [Data Analysis section](#analysis) by studying the graphs and tables that presented a larger frequency of fraud when these factors were present.\n"
+    "    The data analysis leads us to believe that transactions happening between 4pm and 6 am are the most likely to be fraudulent when combined with a large transaction amount (larger than 2000), as well as multiple (surpassing 10) transactions on the same device or by the same user. This was explored in the [Data Analysis section](#analysis) by studying the graphs and tables that presented a larger frequency of fraud when these factors were present. The actions that could be taken were tackled in the [Realistic Use section](#use) where these factor were used as parameters to approve or reject a transaction.\n",
+    "\n",
+    "2.  In addition to the spreadsheet data, what other data would you consider to find patterns\n",
+    "of possible fraudulent behavior?\n",
+    "\n",
+    "    This question was answered in the beginning of the notebook, but will be repeated:\n",
+    "\n",
+    "    Location data holds significant value in fraud detection, as it can be cross-referenced with historical location data to identify suspicious activities. Establishing a comprehensive historical context for each user, particularly when users are identified by card or device ID, is also useful. Without sufficient transactional context attributed to each user, there may be limitations in gathering transactional data, hindering our ability to establish a comparative framework for identifying normal transactions associated with each card.\n",
+    "\n",
+    "3. Considering your conclusions, what would you further suggest in order to prevent frauds\n",
+    "and/or chargebacks?\n",
+    "\n",
+    "    Considering this, it would be prudent to establish some rules to limit the ability that bad actor have to practice fraud, such as the ones established in the real [Realistic Use section](#use) in the detect_spam and detect_large_amount_scam functions use, so limit transactions that surpass a certain threshold and limit the amount of transactions one can make in a certain period of time. (read commented code to understand the reasoning behind the parameters chosen) \n",
+    "\n",
+    "4. Create a simple anti-fraud.\n",
+    "\n",
+    "    This notebook was mostly dedicated to this, but in [Detection Models](#use) and [Realistic Use sections](#use), you can find the most explanation of how the anti-fraud was developed and in the  [Testing Implementation section](#implementation) is the most comprehensive presentation of the anti-fraud system working. "
    ]
   }
  ],
