--- a/index.ipynb
+++ b/index.ipynb
@@ -186,7 +186,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3 id='#analysis'>Data analysis</h3>\n",
+    "\n",
+    "## <a id='ana'></a>\n",
+    "\n",
+    "<h3 id='data'>Data analysis</h3>\n",
     "In the next step, we aim to further investigate the patterns in our dataset, using any analythical tools that could provide valuable insight for our application.\n",
     "\n",
     "First a confusion matrix will be enployed to allow us to estimate what are the most important features to be analyzed. This will be started by grouping transactions with common traits and analyzing how the traits relate to each other."
@@ -699,7 +702,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1 id='#models' style='color:#ED7261'>DETECTION MODELS</h1>"
+    "## <a id='models'></a>\n",
+    "<h1 id='models' style='color:#ED7261'>DETECTION MODELS</h1>"
    ]
   },
   {
@@ -1132,7 +1136,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h4 style='color:orange' id='#use'>Realistic use</h4>\n",
+    "## <a id='use'></a>\n",
+    "\n",
+    "<h4 style='color:orange' id='use'>Realistic use</h4>\n",
     "\n",
     "I was not able to find a false negative to test a rule based system, but I will showcase a Rule based system following the requirements, in the form of what an actual system could look like. \n",
     "\n",
@@ -1232,6 +1238,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## <a id='implementation'></a>\n",
     "<h4 id='implementation' style='color:goldenrod'>Testing the implementation</h4>\n",
     "Here we have some samples of possible outcomes, bur not every possible outcome is represented in the provided samples.\n",
     "\n",
@@ -1358,7 +1365,7 @@
     "1. Analyze the data provided and present your conclusions. What suspicious behaviors did\n",
     "you find? What led you to this conclusion? What actions would you take?\n",
     "\n",
-    "    The data analysis leads us to believe that transactions happening between 4pm and 6 am are the most likely to be fraudulent when combined with a large transaction amount (larger than 2000), as well as multiple (surpassing 10) transactions on the same device or by the same user. This was explored in the [Data Analysis section](#analysis) by studying the graphs and tables that presented a larger frequency of fraud when these factors were present. The actions that could be taken were tackled in the [Realistic Use section](#use) where these factor were used as parameters to approve or reject a transaction.\n",
+    "    The data analysis leads us to believe that transactions happening between 4pm and 6 am are the most likely to be fraudulent when combined with a large transaction amount (larger than 2000), as well as multiple (surpassing 10) transactions on the same device or by the same user. This was explored in the [Data section](#data) by studying the graphs and tables that presented a larger frequency of fraud when these factors were present. The actions that could be taken were tackled in the [Realistic Use section](#use) where these factor were used as parameters to approve or reject a transaction.\n",
     "\n",
     "2.  In addition to the spreadsheet data, what other data would you consider to find patterns\n",
     "of possible fraudulent behavior?\n",
@@ -1374,7 +1381,7 @@
     "\n",
     "4. Create a simple anti-fraud.\n",
     "\n",
-    "    This notebook was mostly dedicated to this, but in [Detection Models](#use) and [Realistic Use sections](#use), you can find the most explanation of how the anti-fraud was developed and in the  [Testing Implementation section](#implementation) is the most comprehensive presentation of the anti-fraud system working. "
+    "    This notebook was mostly dedicated to this, but in [Detection Models](#models) and [Realistic Use sections](#use), you can find the most explanation of how the anti-fraud was developed and in the  [Testing Implementation section](#implementation) is the most comprehensive presentation of the anti-fraud system working. "
    ]
   }
  ],
