--- a/index.ipynb
+++ b/index.ipynb
@@ -1252,7 +1252,7 @@
    "metadata": {},
    "source": [
     "## <a id='implementation'></a>\n",
-    "<h4 id='implementation' style='color:goldenrod'>Testing the implementation</h4>\n",
+    "<h4 id='implementation' style='color:orange'>Testing the implementation</h4>\n",
     "Here we have some samples of possible outcomes, bur not every possible outcome is represented in the provided samples.\n",
     "\n",
     "The output is done in a semantic manner to better understand what happened to each test."
@@ -1373,28 +1373,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The aim of this notebook was to solve item 3 of the Risk Analyst I - Case challenge. The questions were answered during this entire notebook they will be condensed and summarised here.\n",
+    "The aim of this notebook was to solve item 3 of the Risk Analyst I - Case challenge. The questions were answered during this entire notebook they will be condensed and summarized here.\n",
     "\n",
     "Questions:\n",
     "\n",
-    "1. Analyze the data provided and present your conclusions. What suspicious behaviors did\n",
-    "you find? What led you to this conclusion? What actions would you take?\n",
+    "1. Analyze the data provided and present your conclusions. What suspicious behaviors did you find? What led you to this conclusion? What actions would you take?\n",
     "\n",
-    "    The data analysis leads us to believe that transactions happening between 4pm and 6 am are the most likely to be fraudulent when combined with a large transaction amount (larger than 2000), as well as multiple (surpassing 10) transactions on the same device or by the same user. This was explored in the [Data section](#data) by studying the graphs and tables that presented a larger frequency of fraud when these factors were present. The actions that could be taken were tackled in the [Realistic Use section](#use) where these factor were used as parameters to approve or reject a transaction.\n",
+    "    The data analysis leads us to believe that transactions happening between 4pm and 6 am are the most likely to be fraudulent when combined with a large transaction amount (larger than 2000), as well as multiple (surpassing 10) transactions on the same device or by the same user. This was explored in the  [Data analysis section](#ana) by studying the graphs and tables that presented a larger frequency of fraud when these factors were present. The actions that could be taken were tackled in the [Realistic Use section](#use) where these factors were used as parameters to approve or reject a transaction.\n",
     "\n",
-    "2.  In addition to the spreadsheet data, what other data would you consider to find patterns\n",
-    "of possible fraudulent behavior?\n",
+    "\n",
+    "2.  In addition to the spreadsheet data, what other data would you consider to find patterns of possible fraudulent behavior?\n",
     "\n",
     "    Location data holds significant value in fraud detection, as it can be cross-referenced with historical location data to identify suspicious activities. Establishing a comprehensive historical context for each user, particularly when users are identified by card or device ID, is also useful. Without sufficient transactional context attributed to each user, there may be limitations in gathering transactional data, hindering our ability to establish a comparative framework for identifying normal transactions associated with each card.\n",
     "\n",
-    "3. Considering your conclusions, what would you further suggest in order to prevent frauds\n",
-    "and/or chargebacks?\n",
+    "3. Considering your conclusions, what would you further suggest in order to prevent frauds and/or chargebacks?\n",
     "\n",
     "    Considering this, it would be prudent to establish some rules to limit the ability that bad actor have to practice fraud, such as the ones established in the real [Realistic Use section](#use) in the detect_spam and detect_large_amount_scam functions use, so limit transactions that surpass a certain threshold and limit the amount of transactions one can make in a certain period of time. (read commented code to understand the reasoning behind the parameters chosen) \n",
     "\n",
     "4. Create a simple anti-fraud.\n",
-    "\n",
-    "    This notebook was mostly dedicated to this, but in [Detection Models](#models) and [Realistic Use sections](#use), you can find the most explanation of how the anti-fraud was developed and in the  [Testing Implementation section](#implementation) is the most comprehensive presentation of the anti-fraud system working. "
+    "  \n",
+    "   This notebook was mostly dedicated to solve this, more details can be found on [Detection Models](#models) and [Realistic Use sections](#use), where you find most of the explanation of how the anti-fraud was developed. And a comprehensive example of the anti-fraud system working can be found at the [Testing Implementation section](#implementation). "
    ]
   }
  ],
