--- a/index.ipynb
+++ b/index.ipynb
@@ -1375,7 +1375,7 @@
    "source": [
     "The aim of this notebook was to solve item 3 of the Risk Analyst I - Case challenge. The questions were answered during this entire notebook they will be condensed and summarized here.\n",
     "\n",
-    "Questions:\n",
+    "Questions and answers:\n",
     "\n",
     "1. Analyze the data provided and present your conclusions. What suspicious behaviors did you find? What led you to this conclusion? What actions would you take?\n",
     "\n",
