--- a/index.ipynb
+++ b/index.ipynb
@@ -9,25 +9,24 @@
     "Candidate: Vinícius S. Brandão\n",
     "</h2>\n",
     "\n",
-    "*This project was developed to tackle the requirements on the pdf version of the challenge, some of the github's requirements were addressed, but they were largely an afterthought, tackling both would be too complex for the span of a week. For this reason, this project will not work with payloads, it will merely emulate this on the [Testing implementation section](#implementation)*\n",
+    "<!-- *This project was developed to tackle the requirements on the pdf version of the challenge, some of the github's requirements were addressed, but they were largely an afterthought, tackling both would be too complex for the span of a week. For this reason, this project will not work with payloads, it will merely emulate this on the [Testing implementation section](#implementation)* -->\n",
     "\n",
-    "For a more straight to the point answer, check the [Conclusion section](#conclusion) by clicking or scrolling to the bottom. There, the questions are answered in a direct manner, answering each point of item 3 of the challenge.\n"
+    "This notebook is very long and goes deep in every topic, so for a more straight to the point answer, check the [Conclusion section by clicking here](#conclusion) or scrolling to the bottom. There, each point of item 3 from the challenge is answered directly.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To solve the technical part of this challenge, the chosen tool was Python. This Python notebook has a structured approach to solve the problems, as follows:\n",
-    "\n",
+    "To solve the technical part of this challenge, the chosen tool was Python.<br/>This Python notebook has a structured approach to solve the problems, as follows:\n",
     "<ul>\n",
     "<li>\n",
-    "Intent: Clearly state what is desired or possible.</li>\n",
-    "<li>\n",
-    "Code: Implement to extract desired information or results. With commented steps.\n",
+    "<span style='color:orange'>Intent: </span>Clearly state what is desired or possible.</li>\n",
+    "<li><span style='color:orange'>\n",
+    "Code:  </span>Implement to extract desired information or results. With commented steps.\n",
     "</li>\n",
-    "<li>\n",
-    "Output & Analysis: Interpret and analyze the results in relation to the intended outcomes.\n",
+    "<li><span style='color:orange'>\n",
+    "Output & Analysis:  </span>Interpret and analyze the results in relation to the intended outcomes.\n",
     "</li>\n",
     "</ul>\n"
    ]
