--- a/index.ipynb
+++ b/index.ipynb
@@ -4,12 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2 style='color:#50E15F'>Teste técnico - Risk Analyst Cloudwalk.</h2>\n",
+    "\n",
     "<h2>\n",
-    "Candidate: Vinícius S. Brandão\n",
+    "Vinícius S. Brandão - Chargeback Detection\n",
     "</h2>\n",
     "\n",
     "<!-- *This project was developed to tackle the requirements on the pdf version of the challenge, some of the github's requirements were addressed, but they were largely an afterthought, tackling both would be too complex for the span of a week. For this reason, this project will not work with payloads, it will merely emulate this on the [Testing implementation section](#implementation)* -->\n",
+    "Este notebook foi editado, pois originalmente fazia parte de um teste técnico no qual fui aprovado. No entanto, não desejo que haja menção direta à empresa envolvida. Portanto, se o conteúdo parecer de difícil compreensão, isso se deve ao fato de que o notebook foi adaptado para responder às perguntas do teste.\n",
     "\n",
     "This notebook is very long and goes deep in every topic, so for a more straight to the point answer, check the [Conclusion section by clicking here](#conclusion) or scrolling to the bottom. There, each point of item 3 from the challenge is answered directly.\n"
    ]
@@ -1372,8 +1373,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The aim of this notebook was to solve item 3 of the Risk Analyst I - Case challenge. The questions were answered during this entire notebook they will be condensed and summarized here.\n",
-    "\n",
     "Questions and answers:\n",
     "\n",
     "1. Analyze the data provided and present your conclusions. What suspicious behaviors did you find? What led you to this conclusion? What actions would you take?\n",
